--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  redis:
-    image: "redis:alpine"
-    container_name: quickstart_redis
-    restart: always
-    ports:
-      - "6379:6379"
+  # redis:
+  #   image: "redis:alpine"
+  #   container_name: quickstart_redis
+  #   restart: always
+  #   ports:
+  #     - "6379:6379"
 
   backend:
     build: .
@@ -28,7 +28,7 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: "postgresql://quickstart_user:password123@postgres:5432/quickstart_db?schema=public"
+      DATABASE_URL: ${DATABASE_URL}
     volumes:
       - .:/app
       - /app/node_modules
