--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,13 @@ services:
     depends_on:
       - postgres
     environment:
+      NODE_ENV: development
       DATABASE_URL: ${DATABASE_URL}
     volumes:
       - .:/app
       - /app/node_modules
+    command:
+      sh test.sh
 
 volumes:
   postgres_data:
